Ifs' description edit.

--- a/article.html
+++ b/article.html
@@ -1,10 +1,8 @@
-<h1>Легкий шаблонизатор на PHP</h1>
-
 <script> var CONTENTS_LEVEL = 2 </script>
 
 <p>
 Вниманию читателей предлагается простой в использовании обработчик шаблонов на языке PHP с поддержкой условных конструкций, циклов, подключения вложенных шаблонов и вызова функций. Время обработки шаблона составляет в среднем 20-70 мс.
-Для работы требуется подключение <a name="download" href="http://webew.ru/f/rYHxgJVX.php" style="font-weight: bold">одного php-файла</a> (есть и на <a name="github" href="https://github.com/1234ru/websun" style="font-weight: bold">GitHub</a>). Код стабилен и применяется на нескольких работающих проектах.
+Для работы требуется подключение <a name="download" href="http://webew.ru/f/7JqarQyf.php" style="font-weight: bold">одного php-файла</a> (есть и на <a name="github" href="https://github.com/1234ru/websun" style="font-weight: bold">GitHub</a>). Код стабилен и применяется на нескольких работающих проектах.
 </p>
 
 <h2>Основы синтаксиса: переменные, условия, циклы</h2>
@@ -399,22 +397,27 @@ $html = websun_parse_template(
 
 [syntax=html]{?*a=1*} a равно 1 {?}
 
-{?!*a=1*} a не равно 1 {?}
+{?!* a = 1 *} a не равно 1 {?}
+{?* a != 1 *} a не равно 1, другой способ {?}
 
-{?*a>1*} a больше 1 {?}
+{?* a == 1 *} a строго равно 1 (числу) {?}
+{?* a == "1" *} a строго равно 1 (строке) {?}
+{?* a !== 1 *} a строго не равно 1 (числу) {?}
 
-{?!*a>1*} a не больше (т.е. меньше или равно) 1 {?}
+{?* a > 1 *} a больше 1 {?}
 
-{?*a=b*} а равно b {?}
+{?!* a > 1 *} a не больше (т.е. меньше или равно) 1 {?}
 
-{?*a="раз"*} a - это "раз" {?}[/syntax]
+{?* a = b *} а равно b {?}
+
+{?* a = "раз" *} a - это "раз" {?}[/syntax]
 
 Условия можно делать вложенными:
 
-[syntax=text]{?!*a=1*} 
+[syntax=text]{?!* a = 1 *} 
 	а не равно 1
-	{?*a=10*} а равно 10 {?} 
-	{?*a=b*} а равно b {?}
+	{?* a = 10 *} а равно 10 {?} 
+	{?* a = b *} а равно b {?}
 {?}[/syntax]
 
 В условиях можно использовать результат работы функций:
